// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`<NavLink> should add class active when is active 1`] = `
<div>
  <a
    aria-current="page"
    class="navItem"
    href="/storage"
  >
    <svg />
    Content
  </a>
</div>
`;

exports[`<NavLink> should render icon and text 1`] = `
<div>
  <a
    class="navItem"
    href="/storage"
  >
    <svg />
    Content
  </a>
</div>
`;
